--- a/VideosTube/src/main/webapp/static/css/style.css
+++ b/VideosTube/src/main/webapp/static/css/style.css
@@ -178,6 +178,49 @@ ul.twPc-Arrange {
 	left: 290px;
 }
 
+.tooltiptext {
+    visibility: hidden;
+    width: 100px;
+    border: solid;
+    border-color: red;
+    color: red;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+}
+.subscribeError{
+    visibility: hidden;
+    width: 120px;
+    color: red;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+	
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    top: 73px;
+    left: 730px;
+}
+
+.subsErrMsg{
+    visibility: hidden;
+    width: 250px;
+    color: red;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+	
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    top: 15px;
+    left: 70px;
+}
 /* Channel end */
 div.buttons{
 	position: absolute;
@@ -366,7 +409,7 @@ input::-webkit-input-placeholder {
 	float: left;
 	width: 180px;
 	background: rgb(30, 93, 173);
-	color: rgb(218, 216, 216);
+	color: rgb(5,5,5);
 	border-left: 1px solid rgb(47, 75, 124);
 	padding: 22px 12px;
 	text-align: center;
@@ -420,7 +463,7 @@ input::-webkit-input-placeholder {
 .search-right input[type="text"]{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 0.8em;
-	color: rgb(155, 155, 155);
+	color: rgb(5,5,5);
 	width: 150px;
 	height: 22px;
 	top: 4px;
@@ -483,6 +526,7 @@ input::-webkit-input-placeholder {
 	padding: 7px;
 	border: 1px solid rgb(230, 230, 230);
 	float:left;
+	border-color: #c0c0c0;
 }
 .grid2 {
 	width: 30.326%;
@@ -506,7 +550,7 @@ input::-webkit-input-placeholder {
 .lables p{
 	font-size: 0.89em;
 	font-family: 'Ropa Sans', sans-serif;
-	color: #BBBBBB;
+	color: rgb(5,5,5);
 }
 .lables p a:hover{
 	color:#555;
@@ -570,7 +614,7 @@ input::-webkit-input-placeholder {
 .video1 p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 0.8em;
-	color: rgb(155, 155, 155);
+	color: rgb(5,5,5);
 	line-height: 1.8em;
 }
 .video1 {
@@ -666,7 +710,7 @@ input::-webkit-input-placeholder {
 	font-size: 1.2em;
 	font-family: 'Ropa Sans', sans-serif;
 	padding: 10px 0px 6px 0px;
-	color:rgb(155, 155, 155);
+	color:rgb(5,5,5);
 }
 .title h4{
 	font-size:1em;
@@ -675,7 +719,7 @@ input::-webkit-input-placeholder {
 	padding-bottom:10px;
 }
 .title ul li a{
-	color:rgb(155, 155, 155);
+	color:rgb(5,5,5);
 	font-family: 'Ropa Sans', sans-serif;
 	font-size:0.9em;
 	padding: 0px 3px;
@@ -696,10 +740,10 @@ input::-webkit-input-placeholder {
 .views-count{
 	position: relative;
 	float:right;
-	right:200px;
+	right:330px;
 }
 .view-links h4,.views-count p{
-	color: rgb(155, 155, 155);
+	color: rgb(5,5,5);
 	font-family: 'Ropa Sans', sans-serif;
 	font-size: 0.9em;
 }
@@ -724,7 +768,7 @@ input::-webkit-input-placeholder {
 	font-size: 0.9em;
 }
 .comment1 li a:hover,.comment1 li a span{
-	color: rgb(155, 155, 155);
+	color: rgb(5,5,5);
 }
 .comment1{
 	margin-left:15px;
@@ -743,7 +787,7 @@ input::-webkit-input-placeholder {
 .video-details p,.video-details span{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 0.8em;
-	color: rgb(155, 155, 155);
+	color: rgb(5,5,5);
 	line-height: 1.8em;
 }
 .video-details p{
@@ -771,7 +815,7 @@ input::-webkit-input-placeholder {
 	display:inline-block;
 }
 .tags h3{
-	color: rgb(155, 155, 155);
+	color: rgb(5,5,5);
 	font-family: 'Ropa Sans', sans-serif;
 	font-size: 0.9em;
 	text-transform:uppercase;
@@ -784,7 +828,7 @@ input::-webkit-input-placeholder {
 	font-family: 'Ropa Sans', sans-serif;
 	padding-top: 4px;
 	padding-bottom: 4px;
-	color:rgb(155, 155, 155);
+	color:rgb(5,5,5);
 	padding: 15px 0px 10px 0px;
 	border-bottom: 1px dashed rgb(201, 201, 201);
 }
@@ -1015,7 +1059,7 @@ ul.dc_paginationA03 li a:hover, ul.dc_paginationA03 li a.current {
 .contact-form span{
 	display:block;
 	font-size:0.8125em;
-	color: rgb(155, 155, 155);
+	color: rgb(5,5,5);
 	padding-bottom:5px;
 	font-family: 'Ropa Sans', sans-serif;
 }
@@ -1033,7 +1077,7 @@ ul.dc_paginationA03 li a:hover, ul.dc_paginationA03 li a.current {
 			-o-box-shadow: inset 0px 0px 3px #999;
 			-webkit-appearance:none;
 			font-size: 1em;
-			color: rgb(155, 155, 155);
+			color: rgb(5,5,5);
 }
 .contact-form textarea{
 		resize:none;
@@ -1077,7 +1121,7 @@ ul.dc_paginationA03 li a:hover, ul.dc_paginationA03 li a.current {
 }
 .company_address p{
 	font-size:0.8125em;
-	color:rgb(155, 155, 155);
+	color:rgb(5,5,5);
 	line-height:1.8em;
 	font-family :verdana, arial, helvetica, helve, sans-serif;
 }
@@ -1786,5 +1830,14 @@ float:left;
 	top: 20px;
 	position: relative;
 	right: 10px;
+}
+
+.anchor{
+	top: 4px;
+	height: 24px;
+
+ }
+.items{
+	text-align: center;	
 }
 
